--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,11 @@ name: Test
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
   paths-ignore:
     - README.md
+  workflow_dispatch:
 
 jobs:
   build:  
