--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,14 +21,14 @@ jobs:
     strategy:
       fail-fast: false    
       matrix:
-        os: [macos-13]
+        os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - name: Select Xcode 15
-        run: sudo xcode-select -s /Applications/Xcode_15.0.app
+      - name: Select Xcode 26
+        run: sudo xcode-select -s /Applications/Xcode_26.0.app
         
       - name: Test
         run: swift test
